--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "Button.js",
   "dependencies": {
+    "@vaadin/router": "^1.7.5",
     "js-tokens": "^4.0.0",
     "lit-element": "^3.3.3",
     "lit-html": "^2.8.0",
+    "lit-route": "^0.4.4",
     "loose-envify": "^1.4.0",
     "object-assign": "^4.1.1",
     "prop-types": "^15.8.1",
