started building endpoints

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "Button.js",
   "dependencies": {
     "@vaadin/router": "^1.7.5",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "js-tokens": "^4.0.0",
     "lit-element": "^3.3.3",
     "lit-html": "^2.8.0",
     "lit-route": "^0.4.4",
     "loose-envify": "^1.4.0",
+    "mongodb": "^6.1.0",
     "object-assign": "^4.1.1",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
