--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -2,12 +2,13 @@
   "name": "html",
   "version": "1.0.0",
   "description": "",
-  "main": "Button.js",
+  "main": "index.js",
   "dependencies": {
     "@vaadin/router": "^1.7.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
+    "lit": "^2.8.0",
     "lit-element": "^3.3.3",
     "lit-html": "^2.8.0",
     "lit-route": "^0.4.4",
@@ -23,13 +24,22 @@
     "scheduler": "^0.19.1"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.0.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-html": "^1.0.3",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "es-dev-server": "^2.1.0",
     "lit": "^2.8.0",
+    "parcel": "^2.10.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-html-entry": "^0.3.0",
+    "rollup-plugin-serve": "^2.0.2",
     "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
-    "serve": "es-dev-server --app-index index.html --node-resolve --watch --open"
+    "serve": "es-dev-server --app-index index.html --node-resolve --watch --open",
+    "build": "rollup --config"
   },
   "keywords": [],
   "author": "",
